<resources>
    <string name="app_name" translatable="false">SMS Droid</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="err_msg_key">Введите ключ доступа</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="network_adapters">Network Adapters</string>
    <string name="bin_commands">Bin Commands</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="ACCOUNT_TYPE">com.viber.voip</string>
    <string name="title_activity_qmain">QMainActivity</string>


    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>

    <string name="title_home">SMS</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_data_available">No data available</string>

    <!-- SCREEN TITLES -->
    <string name="title_operations">Operations</string>
    <string name="title_balance">Balance</string>
    <string name="title_set_rate">Set Rate</string>
    <string name="title_get_num">Virtual number</string>
    <string name="title_order_add">Order Add</string>
    <string name="scr_order_add_btn">Создать новый заказ</string>
    <string name="scr_order_add_city_hint">Cписок городов</string>
    <string name="scr_order_add_city_tv">Город (или список городов через запятую), который вы желаете чтобы был указан при регистрации аккаунтов.</string>
    <string name="scr_order_add_gender_tv">Пол, который вы желаете чтобы был указан при регистрации аккаунтов.</string>
    <string name="scr_order_add_age_hint">Возраст, который вы желаете чтобы был указан при регистрации аккаунтов</string>
    <string name="scr_order_add_name_tv">Список имен (имен и фамилий) через запятую, которые вы желаете чтобы были использованы при регистрации аккаунтов. Максимум 100 символов</string>
    <string name="scr_order_add_count_hint">Количество аккаунтов:</string>
    <string name="scr_order_add_country_tv">Идентификатор страны для получения номера.</string>
    <string name="scr_order_add_service_tv">Сайт (сервис) от которого будет ожидаться и отображаться смс</string>
    <string name="scr_order_add_options_text">Дополнительные параметры</string>
    <string name="scr_order_add_name_hint">Имена</string>
    <string name="btn_action_set_ready">Получить смс...</string>
    <string name="btn_action_set_operation_over">Завершить операцию с уведомлением о неверном коде</string>
    <string name="btn_action_set_operation_revise">Запрос на уточнение ответа по операции.</string>
    <string name="btn_action_get_num_repeat">Запрос повторного использования данного номера.</string>
    <string name="btn_action_set_operation_used">выданный номер уже использован или заблокирован в сервисе для которого запрашивалась активация.</string>
    <string name="btn_action_set_operation_ok">Код успешно получен</string>
    <string name="textView2">Выделенный номер:</string>
    <string name="action_exit">Exit</string>
    <string name="about">This is our App, please see http://... \nEmail support at alexvarboffin@gmail.com.</string>
    <string name="action_about">About</string>
    <string name="title_api_key">API access key</string>
    <string name="account_balanse">На вашем счету %.2f руб.</string>
</resources>
