<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <!--item

        android:icon="@drawable/ic_sms"
        android:title=""
        app:showAsAction="always" />-->

    <item
        android:id="@+id/action_insert_api_key"
        android:title="@string/title_api_key" />


    <item
        android:id="@+id/action_get_num"
        android:title="@string/title_get_num" />

    <item
        android:id="@+id/action_balance"
        android:icon="@drawable/ic_sms"
        android:title="@string/title_balance" />

    <item
        android:id="@+id/action_operations"
        android:icon="@drawable/ic_sms"
        android:title="@string/title_operations" />

    <item
        android:id="@+id/action_set_rate"
        android:icon="@drawable/ic_sms"
        android:title="@string/title_set_rate" />


    <item
        android:id="@+id/action_order_add"
        android:title="@string/title_order_add"
        android:visible="false" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about" />

</menu>