<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lv_toolpapel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            tools:background="#ff0000">


            <TextView
                android:id="@+id/tv_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="response" />

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="service" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/textView2"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_number_title"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_content_copy_black_24dp"
                    android:drawableStart="@drawable/ic_content_copy_black_24dp"
                    android:textSize="20sp"
                    android:visibility="gone"
                    tools:text="number"
                    tools:visibility="visible" />


                <TextView
                    android:id="@+id/tv_msg_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_number"
                    android:text="Код из смс:"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_msg_title"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_content_copy_black_24dp"
                    android:drawableStart="@drawable/ic_content_copy_black_24dp"
                    android:textSize="20sp"
                    android:visibility="gone"
                    tools:text="number"
                    tools:visibility="visible" />
            </RelativeLayout>

        </LinearLayout>


    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/lv_toolpapel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        tools:background="#000000">

        <Button
            android:id="@+id/btn_action_set_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0ad4e"
            android:text="@string/btn_action_set_ready"

            android:visibility="gone"
            tools:visibility="visible" />

        <Button

            android:id="@+id/btn_action_set_operation_over"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/btn_action_set_operation_over"
            android:visibility="gone"
            tools:visibility="visible" />


        <Button

            android:id="@+id/btn_action_set_operation_revise"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/btn_action_set_operation_revise"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button

            android:id="@+id/btn_action_get_num_repeat"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/btn_action_get_num_repeat"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button

            android:id="@+id/btn_action_set_operation_used"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/btn_action_set_operation_used"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button

            android:id="@+id/btn_action_set_operation_ok"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@color/success_green"
            android:text="@string/btn_action_set_operation_ok"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>


</RelativeLayout>